styles.css
/* import some fonts */
@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&family=EB+Garamond:ital@0;1&display=swap');

body {
    /* Background pattern for some visual flair */
    background-color: #eee;
    background-image:  linear-gradient(#7070bb20 1px, transparent 1px), linear-gradient(to right, #7070bb20 1px, #f9f9fd 1px);
    background-size: 5vmin 5vmin;
}

div, table {
    font-size: 3.5vmax;
}

.nav-menu {
    margin-top: 5%;
    background: #444;
    border-bottom: solid 1px #dabdad;
}

.nav-menu a {
    font-family: 'Didact Gothic', sans-serif;
    color: #aeaeaa;
}

.nav-menu a:hover, .nav-menu a:focus {
    color: #444;
}

.content {
    padding: 20px 10%;
    font-family: 'Didact Gothic', sans-serif;
}

.content h1, .content h2 {
    font-family: 'EB Garamond', serif;
}

.content .pure-img {
    margin: 0 auto;
    max-height: 50vh;
}

/* Styling for bigger screens,
Like ones bigger than phones */
@media screen and (min-width: 64rem) {
    body {
        background-size: 2.5vmin 2.5vmin;
    }

    div, table {
        font-size: 1.5vw;
    }

    .nav-menu {
        margin-top: 20%;
        border: solid 1px #dabdad;
    }

    .content {
        padding: 20px;
        margin-right: 10%;
    }

    .content .pure-img {
        max-height: 30vh;
    }
}

/* Resume styling only
TODO make me responsive
TODO make me my own style sheet */
.resume-container {
    width: 90%;
    margin: 0 auto;
    font-family: 'Didact Gothic', sans-serif;
}

.resume-contact {
    text-align: right;
    margin-bottom: -3em;
}

.resume-section h1 {
    font-family: 'EB Garamond', serif;
}

.resume-section tr {
    vertical-align: top;
}

.resume-section ul {
    list-style: none;
    padding-left: 20px;
}

.section-experience ul {
    list-style-type: "\1F449\ ";
}

.resume-section table {
    border-collapse: separate;
    border-spacing: 3px 1em;
    margin-top: -1em;
}

.section-experience tr td:first-of-type {
    width: 25%;
    font-family: 'EB Garamond', serif;
}

